# DC

./: .gitignore  README.md  app.py  downloader.py  run.bat
.github/workflows/: build_apk.yml  build_flet_apk.yml
android_app/: Build_DC_APK.ipynb  README.md  build_colab.sh  buildozer.spec  downloader.py  main.py
flet_app/: Build_DC_Flet.ipynb  downloader.py  main.py  pyproject.toml  requirements.txt
